Add: Grande: Desire (2020)

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -672,6 +672,10 @@
           <i class="booktitle">Mimesis and Science: Empirical Research on Imitation and the Mimetic Theory of Culture and Religion</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2011. (272 pages)
           <a href="https://msupress.org/9781611860238/mimesis-and-science/"><abbr>ISBN</abbr> 9781611860238</a>.
         </li>
+        <li>Grande, Per Bjørnar:
+          <i class="booktitle">Desire: Flaubert, Proust, Fitzgerald, Miller, Lana Del Rey</i>. Breakthroughs in Mimetic Theory. Michigan State University Press, 2020. (272 pages)
+          <a href="https://msupress.org/9781611863215/desire/"><abbr>ISBN</abbr> 9781611863215</a>.
+        </li>
         <li><span lang="fr">Hillion, Joël:
           <i class="booktitle">Shakespeare et son double. Les sonnets de Shakespeare à la lumière de la théorie mimétique de René Girard</i>. L'Hermattan</span>, 2011. (256 pages)
           <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=35865"><abbr>ISBN</abbr> 978-2-296-55950-9</a>.
@@ -1205,10 +1209,6 @@
         <li lang="fr">Girard, René:
           <i class="booktitle"></i>. .
           <a href=""><abbr>ISBN</abbr> </a>. 
-        </li>
-        <li>:
-          <i class="booktitle"></i>. .
-          <a href=""><abbr>ISBN</abbr> </a>.
         </li>
         <li>:
           <i class="booktitle"></i>. .
