Add: new section: Louis Althusser

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1207,7 +1207,7 @@
         and
         <a href="marx_karl.html">Karl Marx</a>.
       </p>
-      <h3>Aristotle</h3>
+      <h3>Aristotle (384 – 322 <abbr>BC</abbr>)</h3>
       <ul>
         <li>
           <a href="https://www.philosophytalk.org/shows/aristotle">Aristotle (podcast)</a>,
@@ -1339,6 +1339,21 @@
           <a href="http://www.nietzschesource.org/">Nietzsche Source</a>.
         </li>
         <li>
+          <a href="https://www.nietzsche-gesellschaft.de/start/" hreflang="de" lang="de">Nietzsche-Gesellschaft</a>.
+        </li>
+        <li>
+          <a href="http://www.friedrich-nietzsche-stiftung.de/" hreflang="de" lang="de">Friedrich Nietzsche Stiftung</a>.
+        </li>
+        <li>
+          <a href="https://www.nietzsche-dokumentationszentrum-naumburg.de/" hreflang="de" lang="de">Nietzsche-Dokumentationszentrums Naumburg</a>.
+        </li>
+        <li>
+          <a href="https://www.nietzsche-portal.eu/" hreflang="de" lang="de">Nietzsche-Portal</a>.
+        </li>
+        <li>
+          <a href="http://www.nietzsche-news.org/">The Nietzsche News Center</a>.
+        </li>
+        <li>
           <a href="https://en.wikipedia.org/wiki/Friedrich_Nietzsche_bibliography">Friedrich Nietzsche bibliography</a>,
           <i class="website">Wikipedia</i>.
         </li>
@@ -1432,6 +1447,34 @@
           <a href="https://nonzero.org/post/bertrand-russell-war-logic">Bertrand Russell’s not entirely crazy dream of ending war via logic</a>,
           <i class="website">Nonzero</i>, 23.02.2020.
         </li>
+      </ul>
+
+      <h3>Louis Althusser (1918 – 1990)</h3>
+      <ul>
+        <li><span lang="fr">Althusser, Louis:
+          <i class="booktitle">Initiation à la philosophie pour les non-philosophes</i>.
+          Perspectives critiques. <abbr>PUF</abbr>,</span> 2014. (392 pages)
+          <a href="https://www.puf.com/content/Initiation_%C3%A0_la_philosophie_pour_les_non-philosophes" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-060849-3</a>.
+          <br />In spite of its title, this book is not an introduction to philosophy
+          but a synthesis of the philosopher's own theses.
+        </li>
+        <li><span lang="fr">Balibar, Etienne:
+          <a href="https://www.puf.com/Auteur:Louis_Althusser" hreflang="fr">Louis Althusser</a>,
+          <i class="website"><abbr>PUF</abbr></i></span> (no date).
+          <!--@@links to books at bottom of page-->
+        </li>
+        <li><span lang="fr">Althusser, Louis; Balibar, Etienne; Establet, Roger; Macherey, Pierre; Rancière, Jacques:
+          <i class="booktitle">Lire Le Capital</i>. Quadrigue. <abbr>PUF</abbr></span>, 2014. (684 pages)
+          <a href="https://www.puf.com/content/Lire_Le_Capital" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-063469-0</a>.
+          <br />This book is based on a lecture series in the years 1964-1965 and first published in two volumes in 1965.
+          A second edition, expanded to four volumes, was published in 1973.
+          The edition by <abbr>PUF</abbr> is the third edition, originally published in 1996 under the editorship of Etienne Balibar.
+        </li>
+        <li>Montag, Warren:
+          <i class="booktitle">Louis Althusser</i>. Approaches to Literature. Macmillan Education <abbr>UK</abbr>, 2003.
+          <a href="https://www.macmillanexplorers.com/approaches-to-literature/louis-althusser/15561238"><abbr>ISBN</abbr>  978-0-333-91899-9</a>.
+        </li>
+        <!--More links: https://duckduckgo.com/?q=%22louis+althusser%22+surd%C3%A9termination+litt%C3%A9raire&t=ffab&ia=web -->
       </ul>
 
       <h3>John Searle (born 1932)</h3>
