Add: licharts.com: Literary Devices & Terms

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -578,6 +578,10 @@
           <a href="https://www.ucpress.edu/book/9780520273689/a-handlist-of-rhetorical-terms"><abbr>ISBN</abbr> 9780520273689</a>.
         </li>
         <li>
+          <a href="https://www.litcharts.com/literary-devices-and-terms">Literary Devices &amp; Terms</a>,
+          <i class="website">LitCharts</i>.
+        </li>
+        <li>
           <a href="https://hilbertthm90.wordpress.com/tag/validity-in-interpretation/">blog posts tagged &ldquo;validity in interpretation&rdquo;</a>
           on the blog <i class="blog">A Mind for Madness</i>.<!--by Matt Ward?-->
         </li>
