Add: Yove: Kant's Philosophical Revolution: A Short Guide to the Critique of Pure Reason

--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -125,6 +125,11 @@
         <i class="booktitle">Kants Kritik der reinen Vernunft. Die Grundlegung der modernen Philosophie</i>. München: C. H. Beck</span>, 2011. (378 pages)
         <a href="http://www.beck-shop.de/hoeffe-kants-kritik-reinen-vernunft/productview.aspx?product=7498197"><abbr>ISBN</abbr> 978-3-406-61736-2</a>.
       </li>
+      <li>Yovel, Yirmiyahu:
+        <i class="booktitle">Kant's Philosophical Revolution: A Short Guide to the Critique of Pure Reason</i>.
+        Princeton University Press, 2020. (128 pages)
+        <a href="https://press.princeton.edu/books/paperback/9780691204574/kants-philosophical-revolution"><abbr>ISBN</abbr> 9780691204574</a>.
+      </li>
     </ul>
 
     <h2>Works</h2>
