Add: Lewis: Louis Althusser

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1458,17 +1458,21 @@
           <br />In spite of its title, this book is not an introduction to philosophy
           but a synthesis of the philosopher's own theses.
         </li>
-        <li><span lang="fr">Balibar, Etienne:
-          <a href="https://www.puf.com/Auteur:Louis_Althusser" hreflang="fr">Louis Althusser</a>,
-          <i class="website"><abbr>PUF</abbr></i></span> (no date).
-          <!--@@links to books at bottom of page-->
-        </li>
         <li><span lang="fr">Althusser, Louis; Balibar, Etienne; Establet, Roger; Macherey, Pierre; Rancière, Jacques:
           <i class="booktitle">Lire Le Capital</i>. Quadrigue. <abbr>PUF</abbr></span>, 2014. (684 pages)
           <a href="https://www.puf.com/content/Lire_Le_Capital" hreflang="fr"><abbr>ISBN</abbr> 978-2-13-063469-0</a>.
           <br />This book is based on a lecture series in the years 1964-1965 and first published in two volumes in 1965.
           A second edition, expanded to four volumes, was published in 1973.
           The edition by <abbr>PUF</abbr> is the third edition, originally published in 1996 under the editorship of Etienne Balibar.
+        </li>
+        <li><span lang="fr">Balibar, Etienne:
+          <a href="https://www.puf.com/Auteur:Louis_Althusser" hreflang="fr">Louis Althusser</a>,
+          <i class="website"><abbr>PUF</abbr></i></span> (no date).
+          <!--@@links to books at bottom of page-->
+        </li>
+        <li>Lewis, William:
+          <a href="https://plato.stanford.edu/entries/althusser/">Louis Althusser</a>,
+          <i class="website">Stanford Encylopedia of Philosophy</i>, 16.10.2009, updated 13.02.2018.
         </li>
         <li>Montag, Warren:
           <i class="booktitle">Louis Althusser</i>. Approaches to Literature. Macmillan Education <abbr>UK</abbr>, 2003.
