Add: Grayling: The History of Philosophy

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -330,6 +330,11 @@
     <h4>Other Resources on the History of Philosophy</h4>
     <p>Books</p>:
     <ul>
+      <li>Grayling, A. C.:
+        <i class="booktitle">The History of Philosophy</i>.
+        Penguin, 2020. (720 pages)
+        <a href="https://www.penguin.co.uk/books/305362/the-history-of-philosophy/9780241304549.html"><abbr>ISBN</abbr> 9780241304549</a>.
+      </li>
       <li><span lang="de">
         <i class="title">Kindler Kompakt Philosophie 19.Jahrhundert</i>. Ausgewählt von Jan Urbich. Metzler, 2016</span>. (206 pages)
         <abbr>ISBN</abbr> 978 3 476 04066 4.<!--www.metzlerverlag.de-->
