--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -174,6 +174,13 @@
         <br />From the publisher's description:
         <q>Marx has returned, but which Marx? Recent biographies have proclaimed him to be an emphatically nineteenth-century figure, but in this book, Mike Davis’s first directly about Marx and Marxism, a thinker comes to light who speaks to the present as much as the past.</q>
       </li>
+      <li>Claeys, Gregory:
+        <i class="booktitle">Marx and Marxism</i>. Penguin, 2018. (544 pages)
+        <a href="https://www.penguin.co.uk/books/295493/marx-and-marxism/9780141983486.html"><abbr>ISBN</abbr> 9780141983486</a>.
+        <br />From the publisher's book description
+        <q>(&hellip;) In this wide-ranging account, Gregory Claeys, one of Britain's leading historians of socialism,
+        considers Marx's ideas and their development through the Russian Revolution to the present, showing why Marx and Marxism still matter today.</q>
+      </li>
     </ul>
 
     <p>Book recommendations and reading lists:</p>
