Add: Pickstone: Ways of Knowing

--- a/science/index.html
+++ b/science/index.html
@@ -420,6 +420,11 @@
         <i class="booktitle">Science in Wonderland: The scientific fairy tales of Victorian Britain</i>. Oxford University Press, 2015. (256 pages)
         <a href="https://global.oup.com/academic/product/science-in-wonderland-9780199662654"><abbr>ISBN</abbr> 9780199662654</a>.;
       </li>
+      <li>Pickstone, John V.:
+        <i class="booktitle">Ways of Knowing: A new history of science, technology and medicine</i>.
+        Manchester University Press, 2000. (288 pages)
+        <a href="https://manchesteruniversitypress.co.uk/9780719059940/"><abbr>ISBN</abbr> 978-0-7190-5994-0</a>.
+      </li>
       <!--li><a href="https://www.youtube.com/watch?v=PxkxCSyP60Y">Historical Myths About Science by John L. Heilbro</a>,
         recording of a speech at Washington and Lee University in March 2014.
         (John L. Heilbron's lecture starts at 7'54''.)
