Add: Dupuy: La Jalousie: une géométrie du désir

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -658,6 +658,10 @@
           <a href="http://www.seuil.com/ouvrage/l-auto-organisation-de-la-physique-au-politique-colloque-de-cerisy/9782020220439" hreflang="fr"><abbr>ISBN</abbr> 9782020220439</a>.
           <br />(<a href="http://www.ccic-cerisy.asso.fr/autoorgTM83.html" hreflang="fr">Centre Culturel International de Cerisy</a>.)
         </li>
+        <li><span lang="fr">Dupuy, Jean-Pierre:
+          <i class="booktitle">La Jalousie: une géométrie du désir</i>. Seuil,</span> 2016. (192 pages)
+          <a href="https://www.seuil.com/ouvrage/la-jalousie-jean-pierre-dupuy/9782021038316" hreflang="fr"><abbr>ISBN</abbr> 9782021038316</a>.
+        </li>
         <li><span lang="fr">Florey, Sonya:
           <i class="booktitle">René Girard, critique littéraire ?</i>. Archipel Essais</span>, 2003. (97 pages)
           <a href="http://www.lcdpu.fr/livre/?GCOI=27000100979080" hreflang="fr"><abbr>ISBN</abbr> 978-2-940355-05-1</a>&nbsp;/
