Add: Dupuy: Ordres et désordres

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1060,6 +1060,11 @@
           Today, organizations of all kinds are ruled by the belief that the path to success is quantifying human performance, publicizing the results, and dividing up the rewards based on the numbers.
           But in our zeal to instill the evaluation process with scientific rigor, we've gone from measuring performance to fixating on measuring itself—and this tyranny of metrics now threatens the quality of our organizations and lives.</q>
       </li>
+      <li><span lang="fr">Dupuy, Jean-Pierre:
+        <i class="booktitle">Ordres et Désordres. Enquête sur un nouveau paradigme</i>.
+        La Couleur des idées. Seuil,</span> 1990. (288 pages)
+        <a href="https://www.seuil.com/ouvrage/ordres-et-desordres-enquete-sur-un-nouveau-paradigme-jean-pierre-dupuy/9782020109239" hreflang="fr"><abbr>ISBN</abbr> 9782020109239</a>.
+      </li>
       <li>Stove, D. C.: <i class="booktitle">The Rationality of Induction</i>. Oxford University Press, 1986. (238 pages)
         <a href="https://global.oup.com/academic/product/the-rationality-of-induction-9780198247890"><abbr>ISBN</abbr> 9780198247890</a>.
         <br />See <a href="https://en.wikipedia.org/wiki/David_Stove">David Stove (Wikipedia)</a>.
