Expand description of Warburton's recommendations on Five Books

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -399,13 +399,34 @@
       </li>
       <li>Warburton, Nigel:
         <a href="https://fivebooks.com/interview/nigel-warburton-on-introductions-to-philosophy/">Nigel Warburton recommends the best Introductions to Philosophy</a>,
-        <i class="website">Five Books</i> (no date).
-        The book recommendations are
-        <i class="booktitle">What Does It All Mean</i> by Thomas Nagel,
-        <i class="booktitle">The Life You Can Save</i> by Peter Singer,
-        <i class="booktitle">Justice</i> by Michael Sandel,
-        <i class="booktitle">Causing Death and Saving Lives</i> by Jonathan Glover and
-        <i class="booktitle">The Grasshopper</i> by Bernard Suits.
+        <i class="website">Five Books</i>, 18.07.2018, updated on 09.08.2020).
+        (In August 2020 Warburton started
+        <a href="https://twitter.com/philosophybites/status/1295865847785951234">a short Twitter thread on whether introductions to philosophy are really necessary</a>.
+        Some philosophy professors appear to disagree, claiming that readers can move straight to Hume, Mill or Descartes without an introduction.)
+        The book recommendations are the following:
+        <ul>
+          <li>
+            <i class="booktitle">What Does It All Mean?</i> (1987) by Thomas Nagel
+            (a very short and readable introduction by a significant philosopher);
+          </li>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/The_Life_You_Can_Save" aria-label="'The Life You Can Save' on Wikipedia"><i class="booktitle">The Life You Can Save</i> (2009)</a>
+            by Peter Singer (not written as an introduction, but its focus on the question how we should live and
+            Singer's counterarguments to common objections make the reader think about a central issue in philosophy);
+          </li>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Justice:_What%27s_the_Right_Thing_to_Do%3F" aria-label="'Justice: What's the Right Thing to Do?' on Wikipedia"><i class="booktitle">Justice: What's the Right Thing to Do?</i>
+            (2009) by Michael Sandel (a book about political philosophy that grew out of course at Harvard University by a philosopher who can bring philosophy alive);
+          </li>
+          <li>
+            <i class="booktitle">Causing Death and Saving Lives</i> (1977) by Jonathan Glover
+            (a book on moral philosophy by an English philosopher who <q>believes that your thinking about philosophical issues should make a difference to your life</q>) and
+          </li>
+          <li>
+            <i class="booktitle">The Grasshopper: Games, Life and Utopia</i> (1978) by Bernard Suits
+            (a slim volume about the nature of game playing written in dialogue form).
+          </li>
+        </ul>
       </li>
       <li><a href="https://www.youtube.com/watch?v=kjDcM4ZXtfY">Student Philosopher: Where to Start with Philosophy?</a>,
         a video by the School of Life.
