Add: Ingthorson: The Natural vs. The Human Sciences

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -309,6 +309,11 @@
           <br />Reprinted in
           <a href="https://www.chronicle.com/article/There-Is-No-Case-for-the/242724">The Chronicle of Higher Education, 04.03.2018</a>.
         </li>
+        <li>Ingthorsson, Rögnvaldur:
+          <a href="https://www.academia.edu/3553833/The_Natural_vs_The_Human_Sciences_Myth_Methodology_and_Ontology">The Natural <abbr>vs.</abbr> The Human Sciences: Myth, Methodology, and Ontology</a>,
+          <i class="journal">Discusiones Filosóficas</i>, 22.1 (2013): 13–29.
+          <!--@@download PDF-->
+        </li>
       </ul>
     </section>
 
