Add: Laplane et al: Opinion: Why science needs philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -709,6 +709,12 @@
           <i class="blog">Sean Carroll</i>, 23.06.2014.
           <br />The author is a physicist at Caltech.
         </li>
+        <li>Laplane, Lucie; Mantovani, Paolo; Adolphs, Ralph; Chang, Hasok; Mantovani, Alberto; McFall-Ngai, Margaret;
+          Rovelli, Carlo; Sober, Elliott; Pradeu, Thomas:
+          <a href="https://www.pnas.org/content/116/10/3948">Opinion: Why science needs philosophy</a>,
+          <i class="journal">Proceedings of the National Academy of Sciences (<abbr>PNAS</abbr>)</i>, 5 March 2019.
+          <!--@@download PDF-->
+        </li>
       </ul>
 
       <p>Claims that philosophy does not produce knowledge or makes no progress can
