Add: Zimring: What Science Is and How It Really Works

--- a/science/index.html
+++ b/science/index.html
@@ -205,6 +205,11 @@
         <a href="https://en.wikipedia.org/wiki/The_Canon">Wikipedia article
         about the book</a>.
       </li>
+      <li>Zimring, James C.:
+        <i class="booktitle">What Science Is and How It Really Works</i>.
+        Cambridge University Press, 2019. (402 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/what-science-and-how-it-really-works?format=PB&isbn=9781108701648"><abbr>ISBN</abbr> 9781108701648</a>.
+      </li>
       <li>Davies, Brian E.:
         <i class="booktitle">Science in the Looking Glass: What Do Scientists Really Know?</i> Oxford University Press, 2003. (295 pages)
         <abbr>ISBN</abbr> 978 0 19 921918 6.
