Add: Gauch: Scientific Method in Brief

--- a/science/index.html
+++ b/science/index.html
@@ -197,18 +197,22 @@
         <i class="booktitle">Recipes for Science: An Introduction to Scientific Methods and Reasoning</i>. Routledge, 2018. (336 pages)
         <a href="https://www.routledge.com/product/isbn/9781138920736"><abbr>ISBN</abbr> 9781138920736</a>.
       </li>
-      <li>Angier, Natalie: 
+      <li>Angier, Natalie:
         <i class="booktitle">The Canon: The Beautiful Basics of Science</i>.
         Faber &amp; Faber, 2008. 
         (<a href="http://www.faber.co.uk/9780571239726-the-canon.html"><abbr>ISBN</abbr> 9780571239726</a>; 304 pages).
         For a list of scientists interviewed by Angier, see the
-        <a href="https://en.wikipedia.org/wiki/The_Canon">Wikipedia article
-        about the book</a>.
+        <a href="https://en.wikipedia.org/wiki/The_Canon">Wikipedia article about the book</a>.
       </li>
       <li>Zimring, James C.:
         <i class="booktitle">What Science Is and How It Really Works</i>.
         Cambridge University Press, 2019. (402 pages)
         <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/what-science-and-how-it-really-works?format=PB&isbn=9781108701648"><abbr>ISBN</abbr> 9781108701648</a>.
+      </li>
+      <li>Gauch, Hugh G., Jr.:
+        <i class="booktitle">Scientific Method in Brief</i>.
+        Cambridge University Press, 2012. (303 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-brief?format=PB&isbn=9781107666726"><abbr>ISBN</abbr> 9781107666726</a>.
       </li>
       <li>Davies, Brian E.:
         <i class="booktitle">Science in the Looking Glass: What Do Scientists Really Know?</i> Oxford University Press, 2003. (295 pages)
