Add: Philosophy Tube: Marx Part 1, Marx Part 2

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -286,6 +286,14 @@
         (YouTube, 9 minutes, 06.03.2015):
         interview with Diego Fusaro (in Italian with English subtitles).
       </li>
+      <li>Thorn, Oliver:
+        <a href="https://www.youtube.com/watch?v=CWF_0lkBhjY">Marx Part 1: Labour &amp; Class Conflict</a>
+        (<i class="ytchannel">Philosophy Tube</i> on YouTube, 9 minutes, 04.03.2016).
+      </li>
+      <li>Thorn, Oliver:
+        <a href="https://www.youtube.com/watch?v=yynYFEp8H6w">Marx Part 2: Capitalism's Consequences</a>
+        (<i class="ytchannel">Philosophy Tube</i> on YouTube, 8 minutes, 11.03.2016).
+      </li>
     </ul>
   </main>
 
