Add: Philosophy Tube: Marx Part 3, Marx Part 4

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -294,6 +294,14 @@
         <a href="https://www.youtube.com/watch?v=yynYFEp8H6w">Marx Part 2: Capitalism's Consequences</a>
         (<i class="ytchannel">Philosophy Tube</i> on YouTube, 8 minutes, 11.03.2016).
       </li>
+      <li>Thorn, Oliver:
+        <a href="https://www.youtube.com/watch?v=X98uzqpQ3JM">Marx Part 3: Cultural Marxism &amp; Political Correctness</a>
+        (<i class="ytchannel">Philosophy Tube</i> on YouTube, 8 minutes, 18.03.2016).
+      </li>
+      <li>Thorn, Oliver:
+        <a href="https://www.youtube.com/watch?v=mBcW_ylIN14">Marx Part 4: Beyond Capitalism</a>
+        (<i class="ytchannel">Philosophy Tube</i> on YouTube, 11 minutes, 25.03.2016).
+      </li>
     </ul>
   </main>
 
