Add: Gauch: Scientific Method in Practice

--- a/science/index.html
+++ b/science/index.html
@@ -214,6 +214,11 @@
         Cambridge University Press, 2012. (303 pages)
         <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-brief?format=PB&isbn=9781107666726"><abbr>ISBN</abbr> 9781107666726</a>.
       </li>
+      <li>Gauch, Hugh G., Jr.:
+        <i class="booktitle">Scientific Method in Practice</i>.
+        Cambridge University Press, 2002. (456 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-practice?format=PB&isbn=9780521017084"><abbr>ISBN</abbr> 9780521017084</a>.
+      </li>
       <li>Davies, Brian E.:
         <i class="booktitle">Science in the Looking Glass: What Do Scientists Really Know?</i> Oxford University Press, 2003. (295 pages)
         <abbr>ISBN</abbr> 978 0 19 921918 6.
