Add: Field: An Adventure in Statistics: The Reality Enigma

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -294,6 +294,13 @@
         (Originally published by Pyrczak Publishing, until the ninth edition in 2014.)
         <!-- Recommended on ResearchGate (https://www.researchgate.net/post/What_statistical_book_do_you_prefer_of_all_time and related questions)  -->
       </li>
+      <li>Field, Andy:
+        <i class="booktitle">An Adventure in Statistics: The Reality Enigma</i>.
+        SAGE Publishing, 2016. (768 pages)
+        <a href="https://uk.sagepub.com/en-gb/eur/discovering-statistics/book237529"><abbr>ISBN</abbr> 9781446210451</a>.
+        <br />See also the website
+        <a href="https://www.discoveringstatistics.com/books/an-adventure-in-statistics/">An Adventure in Statistics &#8211; Discovering Statistics</a>.
+      </li>
       <li>Field, Andy; Miles, Jeremy; Field, Zoë:
         <i class="booktitle">Discovering Statistics Using R</i>.
         SAGE Publishing, 2012. (992 pages)
