Add: Lohse: Integrating Philosophy of Science Into Research on Ethical, Legal and Social Issues in the Life Sciences

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -950,6 +950,11 @@
         <i class="journal">Nature</i> 577, 15.01.2020.
         <!--@@summarise-->
       </li>
+      <li>Lohse, Simon; Wasmer, Martin S.; Reydon, Thomas A. C.:
+        <a href="http://philsci-archive.pitt.edu/18008/">Integrating Philosophy of Science Into Research on Ethical, Legal and Social Issues in the Life Sciences</a>
+        (preprint), <i class="website">PhilSci Archive</i>, August 2020.
+        <!--@@download PDF-->
+      </li>
       <li><a href="http://www.helsinki.fi/epsa13/"><abbr title="European Philosophy of Science Association">EPSA</abbr> 2013 conference</a>, Helsinki, Finland:
         the <a href="">book of abstracts</a> can be downloaded from the website. 
         <a href="https://www.youtube.com/results?search_query=epsa13+helsinki+tint+coe">Video recordings of the presentations</a> are available on YouTube;
