Add: Miller: Empire of Borders

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -3128,6 +3128,10 @@
         The video is also available on
         <a href="https://www.youtube.com/watch?v=YgCMhz9OPG4">YouTube</a> (12 minutes).
       </li>
+      <li>Miller, Todd:
+        <i class="booktitle">Empire of Borders: The Expansion of the <abbr>US</abbr> Border around the World</i>. Verso, 2019. (304 pages)
+        <a href="https://www.versobooks.com/books/2908-empire-of-borders"><abbr>ISBN</abbr> 9781784785116</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
