Add: Gettier: Is Justified True Belief Knowledge? / Ist gerechtfertigte, wahre Überzeugung Wissen?

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -840,6 +840,12 @@
           <a href="http://analysans.net/the-gettier-problem-in-the-philosophy-of-science/">The Gettier Problem in the Philosophy of Science</a>,
           <i class="blog">Analysans</i>, 12.05.2016.
         </li>
+        <li>Gettier, Edmund L.:
+          <i class="booktitle">Is Justified True Belief Knowledge? / <span lang="de">Ist gerechtfertigte, wahre Überzeugung Wissen?</span></i>.
+          Great Papers Philosophy. <span lang="de">Herausgegeben und übersetzt von Marc Andreee Weber &amp; Nadja-Mira Yolcu. Stuttgart: Reclam,</span> 2019. (106 pages)
+          <a href="https://www.reclam.de/detail/978-3-15-019577-2/Gettier__Edmund_L_/Is_Justified_True_Belief_Knowledge____Ist_gerechtfertigte__wahre_Ueberzeugung_Wissen_" hreflang="de"><abbr>ISBN</abbr> 978-3-15-019577-2</a>.
+          <!--@@Steinkopf: https://steinkopf-buchhandlung.buchkatalog.de/webapp/wcs/stores/servlet/Product/3000002108614/63243/10002/-3/Fachbuecher/Edmund-L-Gettier/Is-Justified-True-Belief-Knowledge-_-Ist-gerechtfertigte-wahre-ueberzeugung-Wissen -->
+        </li>
       </ul>
     </section>
 
