Add h3: Critical Theory

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1214,6 +1214,27 @@
           a specific case of the principle of parsimony.
         </li>
       </ul>
+
+      <h3>Critical Theory</h3>
+      <ul>
+        <li>Bronner, Stephen Eric:
+          <i class="booktitle">Critical Theory: A Very Short Introduction</i>.
+          Second edition. Oxford University Press, 2017. (160 pages)
+          <a href="https://global.oup.com/academic/product/critical-theory-a-very-short-introduction-9780190692674"><abbr>ISBN</abbr> 9780190692674</a>.
+        </li>
+        <li>Jeffreys, Stuart:
+          <i class="booktitle">Grand Hotel Abyss: The Lives of the Frankfurt School</i>.
+          Verso, 2016. (448 pages)
+          <a href="https://www.versobooks.com/books/2501-grand-hotel-abyss"><abbr>ISBN</abbr> 9781784785697</a>.
+          <!--@@Steinkopf: https://steinkopf-buchhandlung.buchkatalog.de/Product/4099276460851878124/63243/10002/-3/Fachbuecher/Stuart-Jeffries/Grand-Hotel-Abyss/4099276460822241441/4099276460822241224/4099276460822241224
+            @@Müller: https://www.nurgutebuecher.de/index.php?cl=details&steinscheid=13943594&lang=0&listtype=search&searchparam=Grand%20Hotel%20Abyss
+          -->
+        </li>
+        <li>
+          <a href="https://www.versobooks.com/lists/3982-critical-theory-verso-student-reading">Critical Theory: Verso Student Reading</a>,
+          <i class="website">Verso</i>, 23.08.2020.
+        </li>
+      </ul>
     </section>
 
     <section>
