Add: Schwandt: Kritische Theorie. Eine Einführung

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1222,6 +1222,13 @@
           Second edition. Oxford University Press, 2017. (160 pages)
           <a href="https://global.oup.com/academic/product/critical-theory-a-very-short-introduction-9780190692674"><abbr>ISBN</abbr> 9780190692674</a>.
         </li>
+        <li><span lang="de">Schwandt, Michael:
+          <i class="booktitle">Kritische Theorie. Eine Einführung</i>.
+          6. Auflage. Schmetterling Verlag, 2010.</span> (240 pages)
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-664-X.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-664-X</a>.
+          <br />See also
+          <a href="http://www.theorie.org/titel/664_kritische_theorie_6_auflage" hreflang="de" lang="de"><i class="booktitle">Kritische Theorie</i> (Website theorie.org)</a>.
+        </li>
         <li>Jeffreys, Stuart:
           <i class="booktitle">Grand Hotel Abyss: The Lives of the Frankfurt School</i>.
           Verso, 2016. (448 pages)
