Add: Buchanan: A Dictionary of Critical Theory

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1229,6 +1229,11 @@
           <br />See also
           <a href="http://www.theorie.org/titel/664_kritische_theorie_6_auflage" hreflang="de" lang="de"><i class="booktitle">Kritische Theorie</i> (Website theorie.org)</a>.
         </li>
+        <li>Buchanan, Ian:
+          <i class="booktitle">A Dictionary of Critical Theory</i>.
+          Second edition. Oxford Quick Reference. Oxford University Press, 2018. (528 pages)
+          <a href="https://global.oup.com/academic/product/a-dictionary-of-critical-theory-9780198794790"><abbr>ISBN</abbr> 9780198794790</a>.
+        </li>
         <li>Jeffreys, Stuart:
           <i class="booktitle">Grand Hotel Abyss: The Lives of the Frankfurt School</i>.
           Verso, 2016. (448 pages)
