Add: Heinrich: Kritik der politischen Ökonomie

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -166,6 +166,12 @@
           <q>(&hellip;) In this wide-ranging account, Gregory Claeys, one of Britain's leading historians of socialism,
           considers Marx's ideas and their development through the Russian Revolution to the present, showing why Marx and Marxism still matter today.</q>
         </li>
+        <li><span lang="de">Heinrich, Michael:
+          <i class="booktitle">Kritik der politischen Ökonomie. Eine Einführung in «Das Kapital» von Karl Marx</i>.
+          14. Auflage. Schmetterling Verlag, 2018.</span>
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-697-6.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-697-6</a>.
+          <!--@@see also http://www.theorie.org/titel/697_kritik_der_politischen_oekonomie -->
+        </li>
       </ul>
 
       <p>Book recommendations and reading lists:</p>
