Add: Dasgupta: A History of Indian Philosophy (5 volumes)

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -344,6 +344,14 @@
         Philosophers from outside the German-speaking world include <span lang="fr">Comte</span>, Kierkegaard,
         Spencer, Mill, <span lang="fr">Taine</span>, C. S. Peirce and William James.
       </li>
+      <li>Dasgupta, Surendranath:
+        <a href="https://archive.org/details/indianphilosophy01dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume I</i></a> (1957),
+        <a href="https://archive.org/details/indianphilosophy02dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume II</i></a> (1952),
+        <a href="https://archive.org/details/indianphilosophy03dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume III</i></a> (1952),
+        <a href="https://archive.org/details/historyofindianp04dasguoft/"><i class="booktitle">A History of Indian Philosophy: Volume IV: Indian Pluralism</i></a> (1961),
+        <a href="https://archive.org/details/indianphilosophy05dasguoft"><i class="booktitle">A History of Indian Philosophy: Volume V: Southern Schools of Saivism</i></a> (1955).
+        <br />These volumes were published by Cambridge University Press.
+      </li>
       <li>Kołakowski, Leszek:
         <span lang="de"><i class="booktitle">Was fragen uns die großen Philosophen?</i> Leipzig: Reclam</span>, 2006.
         <br />This is not a history of philosophy but a collection of short lectures in which Kołakowski
