Add: Held: Introduction to Critical Theory: Horkheimer to Habermas

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1229,6 +1229,14 @@
           <br />See also
           <a href="http://www.theorie.org/titel/664_kritische_theorie_6_auflage" hreflang="de" lang="de"><i class="booktitle">Kritische Theorie</i> (Website theorie.org)</a>.
         </li>
+        <li>Held, David:
+          <i class="booktitle">Introduction to Critical Theory: Horkheimer to Habermas</i>.
+          Polity Press, 1991. (520 pages)
+          <a href="https://politybooks.com/bookdetail/?isbn=9780745607696"><abbr>ISBN</abbr> 9780745607696</a>.
+          <br />University of California Press, 1980. (497 pages)
+          <a href="https://www.ucpress.edu/book/9780520041752/introduction-to-critical-theory"><abbr>ISBN</abbr> 9780520041752</a>.
+          <!--1980: Thomas Haker: https://www.buchfreund.de/de/d/e/9780520041752/introduction-to-critical-theory-horkheimer?bookId=91270200 -->
+        </li>
         <li>Buchanan, Ian:
           <i class="booktitle">A Dictionary of Critical Theory</i>.
           Second edition. Oxford Quick Reference. Oxford University Press, 2018. (528 pages)
