--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1235,7 +1235,16 @@
           <a href="https://politybooks.com/bookdetail/?isbn=9780745607696"><abbr>ISBN</abbr> 9780745607696</a>.
           <br />University of California Press, 1980. (497 pages)
           <a href="https://www.ucpress.edu/book/9780520041752/introduction-to-critical-theory"><abbr>ISBN</abbr> 9780520041752</a>.
-          <!--1980: Thomas Haker: https://www.buchfreund.de/de/d/e/9780520041752/introduction-to-critical-theory-horkheimer?bookId=91270200 -->
+          <!--1980: @@Thomas Haker: https://www.buchfreund.de/de/d/e/9780520041752/introduction-to-critical-theory-horkheimer?bookId=91270200 -->
+        </li>
+        <li><span lang="de">
+          <a href="https://www.youtube.com/watch?v=ZGXgKmFg8YU">Ingo Elbe: Einführung in die Kritische Theorie</a>
+          (<i class="ytchannel">Rosa Salon</i></span> on YouTube, 73 minutes, 25.03.2019).
+          <br />This is a recording of a talk at the
+          <span lang="de">Universität Trier</span> on 07.11.2018; it was part of the lecture series
+          <span lang="de">Politische Psychologie heute: Die Rückkehr des autoritären Charakters</span>.
+          <!--Ingo Elbe's publications: https://uol.de/philosophie/pd-dr-ingo-elbe/publikationen/ -->
+          <!--@@rewatch!-->
         </li>
         <li>Buchanan, Ian:
           <i class="booktitle">A Dictionary of Critical Theory</i>.
