Add: Adorno und die Kritische Theorie. Ein Gespräch mit Martin Mittelmeier

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1246,6 +1246,11 @@
           <!--Ingo Elbe's publications: https://uol.de/philosophie/pd-dr-ingo-elbe/publikationen/ -->
           <!--@@rewatch!-->
         </li>
+        <li><span lang="de">
+          <a href="https://www.youtube.com/watch?v=qOq-t9AKb10">Adorno und die Kritische Theorie. Ein Gespräch mit Martin Mittelmeier</a>
+          (<i class="ytchannel">Deutsches Hygienemuseum Dresden</i></span> on YouTube, 75 minutes, 02.10.2015).
+          <!--@@watch-->
+        </li>
         <li>Buchanan, Ian:
           <i class="booktitle">A Dictionary of Critical Theory</i>.
           Second edition. Oxford Quick Reference. Oxford University Press, 2018. (528 pages)
