Add: Mittelmeier: Adorno in Neapel

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1251,6 +1251,11 @@
           (<i class="ytchannel">Deutsches Hygienemuseum Dresden</i></span> on YouTube, 75 minutes, 02.10.2015).
           <!--@@watch-->
         </li>
+        <li><span lang="de">Mittelmeier, Martin:
+          <i class="booktitle">Adorno in Neapel. Wie sich eine Sehnsuchtslandschaft in Philosophie verwandelt</i>.
+          Siedler,</span> 2015. (304 pages)
+          <a href="https://www.randomhouse.de/Taschenbuch/Adorno-in-Neapel/Martin-Mittelmeier/btb/e462325.rhd" hreflang="de"><abbr>ISBN</abbr> 978-3-442-74869-3</a>.
+        </li>
         <li>Buchanan, Ian:
           <i class="booktitle">A Dictionary of Critical Theory</i>.
           Second edition. Oxford Quick Reference. Oxford University Press, 2018. (528 pages)
