--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1237,6 +1237,11 @@
           <a href="https://www.ucpress.edu/book/9780520041752/introduction-to-critical-theory"><abbr>ISBN</abbr> 9780520041752</a>.
           <!--1980: @@Thomas Haker: https://www.buchfreund.de/de/d/e/9780520041752/introduction-to-critical-theory-horkheimer?bookId=91270200 -->
         </li>
+        <li>Fraser, Nancy; Jaeggi, Rahel:
+          <i class="booktitle">Capitalism: A Conversation in Critical Theory</i>.
+          Polity Press, 2018. (224 pages)
+          <a href="https://politybooks.com/bookdetail/?isbn=9780745671567"><abbr>ISBN</abbr> 9780745671574</a>.
+        </li>
         <li><span lang="de">
           <a href="https://www.youtube.com/watch?v=ZGXgKmFg8YU">Ingo Elbe: Einführung in die Kritische Theorie</a>
           (<i class="ytchannel">Rosa Salon</i></span> on YouTube, 73 minutes, 25.03.2019).
