Add Stokes: Popper

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -855,6 +855,10 @@
           It seems I correctly took incommensurability to suggest a problem with the logico-analytic approach to science, <abbr>i.e.</abbr> with the logical empiricist and Popperian views.
         </blockquote>
       </li>
+      <li>Stokes, Geoffrey:
+        <i class="booktitle">Popper: Philosophy, Politics and Scientific Method</i>. Polity Press, 1998. (216 pages)
+        <a href="https://politybooks.com/bookdetail/?isbn=9780745603223"><abbr>ISBN</abbr> 9780745603223</a>.
+      </li>
       <li>Oreskes, Naomi:
         <i class="booktitle">Why Trust Science?</i>. Princeton University Press, 2019. (376 pages)
         <a href="https://press.princeton.edu/books/hardcover/9780691179001/why-trust-science"><abbr>ISBN</abbr> 9780691179001</a>.
