Add: Confucius: The Analects. translated by Moss Roberts

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2223,6 +2223,11 @@
           <a href="http://schopenhauer.de/" hreflang="de" lang="de">Schopenhauer-Gesellschaft</a>.
         </li>
         <!--@@section Chinese philosophy-->
+        <li>Confucius:
+          <i class="booktitle">The Analects: Conclusions and Conversations of Confucius</i>.
+          Translated by Moss Roberts. University of California Press, November 2020. (176 pages)
+          <a href="https://www.ucpress.edu/book/9780520343290/the-analects"><abbr>ISBN</abbr> 9780520343290</a>.
+        </li>
         <li>
           <a href="https://aeon.co/essays/the-influential-confucian-philosopher-you-ve-never-heard-of">The second sage&nbsp;/ The influential Confucian philosopher you’ve never heard of</a>,
           <i class="website">Aeon</i>, 31.10.2016.
